# WriteSAE

./: .gitignore  CITATION.cff  MODEL_CARD.md  README.md  REPRODUCE.md  pyproject.toml
core/: _modal_t4_smoke.py  modal_fast_path_image.py  sae.py  sae_variants_README.md  split_utils.py  train.py  types.py
experiments/: _modal_utils.py  run_9pager_batch2.py  run_9pager_overnight.py  run_batchtopk_downstream.py  run_collective_residual_analysis.py  run_deltanet_validation.py  run_downstream_sensitivity.py  run_final_reviewer_fixes.py  run_gla_validation.py  run_interp_comparison.py  run_khead_curve.py  run_mixed_position_downstream.py  run_rank_downstream.py  run_residual_correlation.py  run_reviewer_experiments.py  run_reviewer_round2.py  run_reviewer_round3.py
experiments/ablations/: circuit_ablation.py  circuit_ablation_random.py  circuit_ablation_v2.py  encoder_swap_ablation.py  layer_encoder_swap_ablation.py
experiments/analysis/: alive_overlap.py  analyze.py  baselines.py  evaluate_downstream.py  factor_trace.py  feature_quality.py  interpret.py  memory_alignment.py  probe_features.py  write_alignment_causal.py
experiments/extraction/: extract_states.py  run_modal.py
experiments/mamba2/: mamba2_sae_experiment.py  mamba2_write_geometry.py
experiments/steering/: causal_clamp.py  generation_intervention.py  hierarchical_transplant.py  memory_slot_erase.py  memory_slot_suppress.py  multihead_transplant.py  single_feature_h4.py  (+2 more)
notebooks/: 00_quickstart.ipynb
scripts/: SLOTFILL.md  clean_amplified_kl.py  slotfill.py
tests/: test_sae_variants.py
(+3 files in other folders)
